force-app/main/default/objects/clofor_com_cfs__BalanceSheet__c/fields/clofor_com_cfs__RollupCashOnHandOpenBal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupCashOnHandOpenBal__c</fullName>
    <label>ROLLUP CASH ON HAND-OPENING BAL</label>
    <summarizedField>clofor_com_cfs__ACBalBS__c.clofor_com_cfs__OpenBalBS__c</summarizedField>
    <summaryFilterItems>
        <field>clofor_com_cfs__ACBalBS__c.clofor_com_cfs__BalanceTypeBS__c</field>
        <operation>equals</operation>
        <value>Cash On Hand</value>
    </summaryFilterItems>
    <summaryForeignKey>clofor_com_cfs__ACBalBS__c.clofor_com_cfs__BSID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>