force-app/main/default/objects/clofor_com_cfs__BalanceSheet__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Currency__c</columns>
    <columns>clofor_com_cfs__PeriodType__c</columns>
    <columns>clofor_com_cfs__PreviousBSID__c</columns>
    <columns>clofor_com_cfs__AtDay__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>