force-app/main/default/objects/clofor_com_cfs__BalanceSheet__c/listViews/clofor_com_cfs__BalanceSheetSubtotalTotal.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__BalanceSheetSubtotalTotal</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__AtDay__c</columns>
    <columns>clofor_com_cfs__PeriodType__c</columns>
    <columns>clofor_com_cfs__CloseBalCurrentAssets__c</columns>
    <columns>clofor_com_cfs__OpenBalCurrentAssets__c</columns>
    <columns>clofor_com_cfs__CloseBalFixedLongInv__c</columns>
    <columns>clofor_com_cfs__OpenBalFixedLongInv__c</columns>
    <columns>clofor_com_cfs__CloseBalTotalAsset__c</columns>
    <columns>clofor_com_cfs__OpenBalTotalAsset__c</columns>
    <columns>clofor_com_cfs__ClosingBalancePayableDebts__c</columns>
    <columns>clofor_com_cfs__OpenBalPayableDebts__c</columns>
    <columns>clofor_com_cfs__CloseBalCapitals__c</columns>
    <columns>clofor_com_cfs__OpenBalCapitals__c</columns>
    <columns>clofor_com_cfs__CloseBalTotalLiabilityEqu__c</columns>
    <columns>clofor_com_cfs__OpenBalTotalLiabilityEqu__c</columns>
    <filterScope>Everything</filterScope>
    <label>BALANCE SHEET-SUBTOTAL&amp;TOTAL</label>
    <language>en_US</language>
</ListView>